--- a/esci-precision.html
+++ b/esci-precision.html
@@ -27,7 +27,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 0.1.22  6  Nov 2020 #12 Change text in panel3/4
 
 1.1.0  6 Nov 2020 Rationalised into one repository
-1.1.3  13 Nov 2020 Remove italic from rho symbol in html
+1.1.3  13 Nov 2020 #11 Remove italic from rho symbol in html
 
 -->
 <!--endregion -->
