Missed a rho in panel 2 dance-r

--- a/esci-dance-r.html
+++ b/esci-dance-r.html
@@ -121,7 +121,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
               <div class=rsliderpaneltip data-tooltip><img id=rnudgebackward class="icons slidericons" src=./images/left.png alt='nudge backwards'></div>
               <div class=rsliderpaneltip data-tooltip><img id=rnudgeforward class="icons slidericons" src=./images/right.png alt='nudge forward'></div>
               <div class=rholabeltip data-tooltip>
-                <div id=rholabel><em>&rho;</em></div>
+                <div id=rholabel>&rho;</div>
                 <input id=rval type=text>
               </div>
             </div>
