--- a/esci-precision.html
+++ b/esci-precision.html
@@ -31,6 +31,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 1.1.4  16 Nov 2020 #10 Add confidence intervals dropdown and change TargetMoe increment to 0.01
 1.1.5  
 1.1.6  17 Nov 2020 #10 Reposition CI dropdown etc
+1.1.7  18 Nov 2020 #10 Adjustment in text panel 1
 
 -->
 <!--endregion -->
@@ -134,7 +135,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
                       <option value=0.002>99.8%</option>
                       <option value=0.001>99.9%</option>
                     </select>
-                    <span class=copcnttip data-tooltip>CI</span> </span><span id=ciud data-tooltip class=backcolour>0.0</span></div>
+                    <span class=copcnttip data-tooltip>CI is </span> </span><span id=ciud data-tooltip class=backcolour>0.0</span></div>
                   <div class='font15 targettip' data-tooltip>...set by slider below figure</div>
                 </div>
 
@@ -192,7 +193,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
                       <option value=0.002>99.8%</option>
                       <option value=0.001>99.9%</option>
                     </select>
-                    <span class=copcnttip data-tooltip>CI </span> </span><span id=cipd class=backcolour>0.0</span></div>
+                    <span class=copcnttip data-tooltip>CI is </span> </span><span id=cipd class=backcolour>0.0</span></div>
                   <div class='font15 targettip' data-tooltip>...set by slider below figure</div>
                 </div>
            
