--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
           <div id=escitext>exploratory software for confidence intervals</div>          
         </div>
 
-        <div class='esciblurb darkgrey'><span class=blue>esci</span> software is in development for the second edition. There are two components:</div>
+        <div class='esciblurb darkgrey'><span class=blue>esci</span> software for the second edition. There are two components:</div>
         <div class='esciblurb darkgrey'><span class=blue><a href='https://thenewstatistics.com/itns/esci/jesci/'>esci</a> in R</span>, running in <span class=blue>jamovi</span>, by Robert Calin-Jageman</div>  
           <ul class=darkgrey><li>for data analysis and great graphs with CIs</li></ul>       
         <div class='esciblurb darkgrey'><span class=blue>esci web in JavaScript</span>, by Gordon Moore</div> 
