--- a/esci-correlation.html
+++ b/esci-correlation.html
@@ -56,7 +56,7 @@ Licence       GNU General Public LIcence Version 3, 29 June 2007
 
     <script src=./js/jstat.min.js></script>
 
-    <script src=./js/math.min.js></script>
+    <!-- <script src=./js/math.min.js></script> -->
 
     <script src=./js/d3.min.js></script>
 
